revamp and also exit functions doc

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,13 +1,12 @@
 baseURL = 'https://ameliayeah.github.io'
 languageCode = 'en-us'
 title = 'Melancholia'
-theme = "hugo-theme-m10c"
+theme = "neopost"
+titleCaseStyle = "none"
 
 [params]
+    theme = "dark-blue"
     author = "AmeliaYeah"
-    description = "[Object object]"
 
-[[params.social]]
-    icon = "brand-github"
-    name = "Github"
-    url = "https://github.com/AmeliaYeah"
+[permalinks]
+    posts = "/posts/:year/:month/:day/:title"
