--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://ameliayeah.github.io'
 languageCode = 'en-us'
-title = 'Melancholia'
+title = 'The Mel-ternet'
 theme = "neopost"
 titleCaseStyle = "none"
 
