site looks alot better

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -6,7 +6,7 @@ titleCaseStyle: "none"
 enableRobotsTXT: true
 
 params:
-    theme: "dark-blue"
+    theme: "dark-pink"
     author: "AmeliaYeah"
 
 permalinks:
